# quickshort-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml
api/: openapi.yaml
deployments/terraform/: acm.tf  admin_bucket_policy.tf  admin_s3_oac.tf  apigw.tf  backend.tf  cloudfront.tf  cognito.tf  dynamodb.tf  edge.tf  iam.tf  kinesis.tf  kms.tf  lambda.tf  landing.tf  monitoring.tf  output.tf  providers.tf  route53.tf  secrets.tf  variables.tf  waf.tf
deployments/terraform/admin/: index.html
deployments/terraform/auth/: auth.js  callback.html  register.html  signedout.html  signin.html  signout.html
deployments/terraform/cf-functions/: notfound_redirect.js
deployments/terraform/edge/: admin_jwt_verify.js.tmpl
deployments/terraform/edge/origin_rewrite_index/: index.js
deployments/terraform/policies/: lambda_ddb.json
deployments/terraform/site/: index.html
deployments/terraform/site/users/: index.html
src/: admin.rs  api.rs  auth.rs  handler.rs  id.rs  lib.rs  limits.rs  main.rs  model.rs  oauth.rs  users.rs  util.rs
