[package]
name = "quickshort"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.11"
lambda_http = "0.9"
aws-config = "1"
aws-sdk-dynamodb = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
blake3 = "1"
base62 = "2"
rand = "0.8"
http = "1"
url = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.lambda.deploy]
memory = 512
