[package]
name = "quickshort"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logproc"
path = "src/bin/logproc.rs"

[[authorizer]]
name = "authorizer"
path = "src/bin/qs_authorizer.rs"


[dependencies]
aws_lambda_events = { version = "0.18", default-features = false, features = ["apigw", "kinesis"] }
lambda_runtime = "0.14"
lambda_http = "0.17"
aws-config = "1"
aws-sdk-dynamodb = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
blake3 = "1"
base62 = "2"
rand = "0.8"
http = "1"
jsonwebtoken = "8"
once_cell = "1"
url = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
form_urlencoded = "1.2.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
aws-sdk-kms = "1.85.0"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
urlencoding = "2.1.3"
serial_test = "3.2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.lambda.deploy]
memory = 512
